# netlify-serverless-example

./: .env  .gitignore  Cargo.toml  Makefile  README.md  netlify.toml  package-lock.json  package.json  redirects.js
functions/: typescript-serverless.ts
functions/go-serverless/: go.mod  main.go
functions/rust-serverless/: Makefile
functions/rust-serverless/src/: main.rs
public/: index.html
src/: main.rs
